--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(BIN_DIR "${SOURCE_DIR}/bin")
 #### Application ####
 
 add_definitions("-D DEBUG")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -pedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -pedantic --std=c++0x")
 
 FILE(GLOB Source_files
 	*.cpp
