Move some code around, get rid of struct methods into functions. Flash animate for half a second then start playing again when found completed rows

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *.swp
 build/
 bin/
+xcproj/sdl01.xcodeproj/xcuserdata/emerson.xcuserdatad/xcdebugger/
+xcproj/sdl01.xcodeproj/project.xcworkspace/xcuserdata/
